--- a/src/Components/SideBar/side-bar.scss
+++ b/src/Components/SideBar/side-bar.scss
@@ -1,9 +1,9 @@
 #sidebar{
     background-color: #202b3b;
-    height: 100vh;
+    height: 100%;
     margin: 12px 0 0 5px;
     border-radius: 18px 18px 0 0 ;
-    width: 200px;
+    // width: 200px;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
