--- a/src/Components/Favorites/favorites.scss
+++ b/src/Components/Favorites/favorites.scss
@@ -9,10 +9,11 @@
         border: none;
         color: white;
         height: 30px;
-        width: 130px;
+        // width: 130px;
         border-radius: 5px;
         margin: 20px 0 0 0;
         font-size: 12px;
+        padding: 10px;
     }
     
 
