--- a/src/Components/CityTemperature/city-temperature.scss
+++ b/src/Components/CityTemperature/city-temperature.scss
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: space-between;
     margin-top: 30px;
+    
    
     
     p{
@@ -22,6 +23,7 @@
     img{
         height: 100px;
         padding-right: 10px;
+        width: 100px;
 
     }
     
