--- a/src/Components/WeekConditions/week-conditions.scss
+++ b/src/Components/WeekConditions/week-conditions.scss
@@ -3,6 +3,39 @@
     margin: 12px 8px 0 0;
     border-radius: 18px 18px 0 0;
     height: 100%;
+    text-align: center;
+
+    h2{
+        
+    }
    
+    .wrapConditions{
+        
+        padding: 10px;
+
+        div:first-child{
+            border-bottom: 1px solid black;
+            border-top: 1px solid black;
+            
+        }
+        
+        div:nth-child(2){
+            border-bottom: 1px solid black;
+        }
+        
+        div:nth-child(3){
+            border-bottom: 1px solid black;
+        }
+
+        div:nth-child(4){
+            border-bottom: 1px solid black;
+        }
+
+        div{
+            padding: 10px;
+            
+        }
+
+    }
   
 }
