--- a/src/Components/WeekConditions/week-conditions.scss
+++ b/src/Components/WeekConditions/week-conditions.scss
@@ -2,7 +2,7 @@
     background-color: #202b3b;
     margin: 12px 8px 0 0;
     border-radius: 18px 18px 0 0;
-    height: 100%;
+    min-height: 100vh;
     text-align: center;
 
     h2{
