--- a/src/Components/Header/header.scss
+++ b/src/Components/Header/header.scss
@@ -7,10 +7,10 @@
     height:50px;
     padding: 15px;
 
-    img{
+    .top-react-icons{
         height: 10px;
-        background-color: white;
-        margin-right: 5px;
+        
+        
     }
 
     button{
@@ -18,6 +18,7 @@
         background-color: #202b3b;
         color: white;
         font-size: 10px;
+        
         
     }
     
