--- a/src/Components/Search/search.scss
+++ b/src/Components/Search/search.scss
@@ -1,4 +1,5 @@
 #Search{
+    display: flex;
     
     input{
         background-color: #202b3b;
@@ -7,5 +8,12 @@
         height: 25px;
         padding: 10px;
         color: white;
+        
+        
     }
+   
+    button{
+        height: 25px;
+    }
+    
 }
