--- a/src/Components/SideBar/side-bar.scss
+++ b/src/Components/SideBar/side-bar.scss
@@ -1,6 +1,6 @@
 #sidebar{
     background-color: #202b3b;
-    height: 100%;
+    min-height: 100vh;
     margin: 12px 0 0 5px;
     border-radius: 18px 18px 0 0 ;
     // width: 200px;
